checkstyle and build